# CompData

./: main.py  pyproject.toml
Case1/: Case1_s214374_s214422.aux  Case1_s214374_s214422.tex  README.md  REPORT_case1_runs.md  case1reportTemplate.aux  case1reportTemplate.tex
Case1/hpc/: common_env.sh  run_aggregate.lsf  run_elastic_net.lsf  run_family.sh  run_pls_pcr.lsf  run_tree_ensembles.lsf  submit_all.sh
Case1/results/: estimatedRMSE_s214374_s214422.csv  leaderboard.csv  predictions_s214374_s214422.csv  sample_estimatedRMSE_YourStudentNo.csv  winner.json
Case1/results/logs/: case1_agg.28073717.out  case1_en.28073714.err  case1_en.28073714.out  case1_pls.28073716.out  case1_tree.28073715.out
Case1/results/runs/pls_pcr/nested/: summary.json  (+3 more)
Case1/results/tmp_smoke/en_nested/: metrics_outer.csv  run_metadata.json  summary.json  tuning_trace.csv
Case1/results/tmp_smoke/pls_nested/: metrics_outer.csv  run_metadata.json  summary.json  tuning_trace.csv
Case1/results/tmp_smoke/tree_nested/: metrics_outer.csv  run_metadata.json  summary.json  tuning_trace.csv
Case1/src/case1_comp/: __init__.py
Case1/src/case1_comp/approaches/: __init__.py
Case1/src/case1_comp/common/: __init__.py  artifacts.py  data.py  metrics.py  nested_cv.py  preprocessing.py  selection.py
Case1/src/case1_comp/orchestrator/: __init__.py  aggregate_results.py  registry.py  run_all.py
Week1/: ex_1_1_Q.py  ex_1_2_Q.py  ex_1_4_1_OLS_Q.py  ex_1_4_2_OLS_Q.py
Week2/: AIC_BIC.py  nested_cv.py
Week2/question_scripts/: Ex_2_1_Q.py
Week3/questions/: w3_ex1.ipynb  w3_ex2.ipynb  w3_ex3.ipynb
(+35 files in other folders)
