[project]
name = "compdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
]
